# codai

./: .gitignore  config.toml  dev-requirements.txt  eda.py  help.md  justfile  me.toml  notes.md  pyproject.toml  readme.md  system.md
icode/: ai.py  main.py
src/: __init__.py  __main__.py  chat.py  common.py  icode.py  main.py  mathai.py  sql.py  testing.py  translate.py
